// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab panel component renders as expected 1`] = `
<div
  className="es-tab-panel"
>
  <div
    className="es-tab-panel__wrapper sc-htpNat cixthU"
  >
    <div
      className="es-tab-panel__tabs sc-bxivhb gWEfbh"
    >
      <button
        aria-expanded={true}
        aria-label="test1 tab"
        className="sc-bdVaJa jjYEoD"
        onClick={[Function]}
        selected={true}
      >
        test1
      </button>
      <button
        aria-expanded={true}
        aria-label="test2 tab"
        className="sc-bdVaJa jjYEoD"
        onClick={[Function]}
        selected={true}
      >
        test2
      </button>
    </div>
  </div>
  <div
    className="es-tab-panel__content sc-ifAKCX MuRpR"
  >
    <div>
      Test Content 1
    </div>
  </div>
</div>
`;

exports[`Tab panel component renders as expected with aria announcer text 1`] = `
<div
  className="es-tab-panel"
>
  <div
    className="es-tab-panel__wrapper sc-htpNat cixthU"
  >
    <div
      className="es-tab-panel__tabs sc-bxivhb gWEfbh"
    >
      <button
        aria-expanded={true}
        aria-label="I'm Simple Name! tab"
        className="sc-bdVaJa jjYEoD"
        onClick={[Function]}
        selected={true}
      >
        <p
          aria-live="assertive"
          className="sc-bwzfXH iOBbZz"
          id="announcer"
        >
          I'm Simple Name! Why am I not just part of simpleName?
        </p>
        test1
      </button>
      <button
        aria-expanded={true}
        aria-label="test2 tab"
        className="sc-bdVaJa jjYEoD"
        onClick={[Function]}
        selected={true}
      >
        test2
      </button>
    </div>
  </div>
  <div
    className="es-tab-panel__content sc-ifAKCX MuRpR"
  >
    <div>
      Test Content 1
    </div>
  </div>
</div>
`;
